Ajustado a segurança, criado tela de diciplina

--- a/AppIFES/Views/Shared/_Layout.cshtml
+++ b/AppIFES/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             @Html.ActionLink("Usuários", "Index", "Usuarios", new { area = "" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Diciplinas", "Index", "Diciplinas", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Grupos", "Index", "Disciplinas", new { area = "" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("Alunos", "Index", "Alunos", new { area = "" }, new { @class = "nav-link" })
