--- a/AppIFES/Views/Disciplinas/Delete.cshtml
+++ b/AppIFES/Views/Disciplinas/Delete.cshtml
@@ -1,18 +1,15 @@
 ﻿@model AppIFES.Models.Disciplina
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Apagar Grupos";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Disciplina</h4>
+<h3>Tem certesa que deseja Apagar esse Grupo?</h3>
+<div>    
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.usuario.nome)
+            @Html.DisplayNameFor(model => model.idusuario)
         </dt>
 
         <dd>
@@ -33,8 +30,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Confirmar" class="btn btn-danger" />
+            @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
         </div>
     }
 </div>
