--- a/AppIFES/Views/Disciplinas/Details.cshtml
+++ b/AppIFES/Views/Disciplinas/Details.cshtml
@@ -1,17 +1,16 @@
 ﻿@model AppIFES.Models.Disciplina
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Informações do Grupo";
 }
 
-<h2>Details</h2>
+<h2>Informações do Grupo</h2>
 
 <div>
-    <h4>Disciplina</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.usuario.nome)
+            @Html.DisplayNameFor(model => model.idusuario)
         </dt>
 
         <dd>
@@ -29,6 +28,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.iddisciplina }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.iddisciplina }, new { @class = "btn btn-warning" })
+    @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
 </p>
