--- a/AppIFES/Views/Disciplinas/Index.cshtml
+++ b/AppIFES/Views/Disciplinas/Index.cshtml
@@ -1,39 +1,42 @@
 ﻿@model IEnumerable<AppIFES.Models.Disciplina>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Cadastro de Grupos";
 }
 
-<h2>Index</h2>
+<h2>Cadastro de Grupos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Novo", "Create", new { area = "" }, new { @class = "btn btn-primary" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.usuario.nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descricao)
-        </th>
-        <th></th>
-    </tr>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.idusuario)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.descricao)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.usuario.nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descricao)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.iddisciplina }) |
-            @Html.ActionLink("Details", "Details", new { id=item.iddisciplina }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.iddisciplina })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.usuario.nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descricao)
+                </td>
+                <td>
+                    @Html.ActionLink("Alterar", "Edit", new { id = item.iddisciplina }, new { @class = "btn btn-warning" })
+                    @Html.ActionLink("Detalhar", "Details", new { id = item.iddisciplina }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Apagar", "Delete", new { id = item.iddisciplina }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
