--- a/AppIFES/Views/Alunodisciplinas/Create.cshtml
+++ b/AppIFES/Views/Alunodisciplinas/Create.cshtml
@@ -39,8 +39,8 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div>    
+    @Html.ActionLink("Cancelar", "Index", new {id = ViewBag.id}, new { @class = "btn btn-success" })
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
