--- a/AppIFES/Views/Alunodisciplinas/Delete.cshtml
+++ b/AppIFES/Views/Alunodisciplinas/Delete.cshtml
@@ -1,18 +1,16 @@
 ﻿@model AppIFES.Models.Alunodisciplina
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Apagar Grupo do Aluno";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja deletar o Grupo do Aluno?</h3>
 <div>
-    <h4>Alunodisciplina</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.aluno.nome)
+            @Html.DisplayNameFor(model => model.idaluno)
         </dt>
 
         <dd>
@@ -20,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.disciplina.descricao)
+            @Html.DisplayNameFor(model => model.iddisciplina)
         </dt>
 
         <dd>
@@ -33,8 +31,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Confirmar" class="btn btn-danger" />
-            @Html.ActionLink("Cancelar", "Index", new { id = ViewBag.idDelete }, new { @class = "btn btn-success" })
+            <input type="submit" value="Confirmar" class="btn btn-success" />
+            @Html.ActionLink("Cancelar", "Index", new { id = ViewBag.idDelete }, new { @class = "btn btn-danger" })
         </div>
     }
 </div>
