--- a/AppIFES/Views/Disciplinas/Index.cshtml
+++ b/AppIFES/Views/Disciplinas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Cadastro de Grupos";
 }
 
-<h2>Cadastro de Grupos</h2>
+<center><h2>Cadastro de Grupos</h2></center>
 
 <p>
     @Html.ActionLink("Novo", "Create", new { area = "" }, new { @class = "btn btn-primary" })
