--- a/AppIFES/Views/Alunodisciplinas/Details.cshtml
+++ b/AppIFES/Views/Alunodisciplinas/Details.cshtml
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { /* id = Model.PrimaryKey */ } new { @class = "btn btn-warning" }) |
+    @Html.ActionLink("Cancelar", "Index", new { area = "" } new { @class = "btn btn-warning" })
 </p>
