--- a/AppIFES/Views/Alunodisciplinas/Index.cshtml
+++ b/AppIFES/Views/Alunodisciplinas/Index.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayFor(modelItem => item.disciplina.descricao)
         </td>
         <td>
-            @Html.ActionLink("Delete", "Delete", new { id =  item.iddisciplina, id2 = item.idaluno }, new { @class = "btn btn-danger" })
+            @Html.ActionLink("Apagar", "Delete", new { id =  item.iddisciplina, id2 = item.idaluno }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
