--- a/AppIFES/Views/Shared/_Layout.cshtml
+++ b/AppIFES/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <ul class="navbar-nav mr-auto">
                 @if (Session["Userid"] != null)
                 {
-                    <li class="nav-item active">                        
+                    <li class="nav-item">                        
                         @Html.ActionLink("Agenda", "Index", "Agenda", new { area = "" }, new { @class = "nav-link" })
                     </li>
                     if (Session["UserSupervisor"].Equals("1"))
