--- a/AppIFES/Views/Agenda/Delete.cshtml
+++ b/AppIFES/Views/Agenda/Delete.cshtml
@@ -57,7 +57,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Confirmar" class="btn btn-success" /> |
+            <input type="submit" value="Confirmar" class="btn btn-danger" /> 
             @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
         </div>
     }
