--- a/AppIFES/Views/Agenda/Details.cshtml
+++ b/AppIFES/Views/Agenda/Details.cshtml
@@ -52,6 +52,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.idagenda }, new { @class = "btn btn-warning" }) |
-    @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-warning" })
+    @Html.ActionLink("Editar", "Edit", new { id = Model.idagenda }, new { @class = "btn btn-warning" }) 
+    @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
 </p>
