--- a/AppIFES/Views/Agenda/Index.cshtml
+++ b/AppIFES/Views/Agenda/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Cadastro de Agenda</h2>
 
 <p>
-    @Html.ActionLink("Criar novo compromisso na agenda", "Create", new { id = ViewBag.idIndex }, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Novo", "Create", new { id = ViewBag.idIndex }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.local)
         </td>
         <td>
-            @Html.ActionLink("Alterar", "Edit", new { id=item.idagenda }, new { @class = "btn btn-warning" }) |
-            @Html.ActionLink("Detalhar", "Details", new { id=item.idagenda }, new { @class = "btn btn-warning" }) |
-            @Html.ActionLink("Apagar", "Delete", new { id=item.idagenda }, new { @class = "btn btn-warning" })
+            @Html.ActionLink("Alterar", "Edit", new { id=item.idagenda }, new { @class = "btn btn-warning" })
+            @Html.ActionLink("Detalhar", "Details", new { id=item.idagenda }, new { @class = "btn btn-success" })
+            @Html.ActionLink("Apagar", "Delete", new { id=item.idagenda }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
