--- a/AppIFES/Views/Agenda/Index.cshtml
+++ b/AppIFES/Views/Agenda/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<AppIFES.Models.Agenda>
+﻿@model IEnumerable < AppIFES.Models.Agenda>
+
 
 @{
     ViewBag.Title = "Index";
@@ -9,49 +10,62 @@
 <p>
     @Html.ActionLink("Novo", "Create", new { id = ViewBag.idIndex }, new { @class = "btn btn-primary" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.iddisciplina)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.dataevento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.titulo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descricao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.local)
-        </th>
-        <th></th>
-    </tr>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.iddisciplina)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Disciplina.descricao)
+            </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.iddisciplina)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.dataevento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.titulo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.local)
-        </td>
-        <td>
-            @Html.ActionLink("Alterar", "Edit", new { id=item.idagenda }, new { @class = "btn btn-warning" })
-            @Html.ActionLink("Detalhar", "Details", new { id=item.idagenda }, new { @class = "btn btn-success" })
-            @Html.ActionLink("Apagar", "Delete", new { id=item.idagenda }, new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
+            <th>
+                @Html.DisplayNameFor(model => model.dataevento)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.titulo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.descricao)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.local)
+            </th>
+            <th></th>
+        </tr>
 
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.iddisciplina)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Disciplina.descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.dataevento)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.titulo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.local)
+                </td>
+              
+                <td>
+                    @Html.ActionLink("Alterar", "Edit", new { id = item.idagenda }, new { @class = "btn btn-warning" })
+                    @Html.ActionLink("Detalhar", "Details", new { id = item.idagenda }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Apagar", "Delete", new { id = item.idagenda }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
