--- a/AppIFES/Views/Login/Login.cshtml
+++ b/AppIFES/Views/Login/Login.cshtml
@@ -3,42 +3,45 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
+<center><h2>Login</h2></center>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <center>
+        <div class="form-horizontal">
 
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @if (ViewBag.MsgInvalida != null)
-        {
-        <div class="alert-danger">
-            @ViewBag.MsgInvalida
-        </div>
-        }
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @if (ViewBag.MsgInvalida != null)
+            {
+                <div class="alert-danger">
+                    @ViewBag.MsgInvalida
+                </div>
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @*@Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                <div class="form-group" @*class="col-md-10"*@>
+                    @Html.EditorFor(model => model.email,  new { htmlAttributes = new { @class = "form-control", @type = "email", @placeholder = "Entre com seu email" } })
+                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @*@Html.LabelFor(model => model.senha, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                <div class="form-goup">
+                    @Html.EditorFor(model => model.senha, new { htmlAttributes = new { @class = "form-control" , @type = "password", @placeholder = "Entre com sua senha" } })
+                    @Html.ValidationMessageFor(model => model.senha, "", new { @class = "text-danger" })
+                </div>
+                
+            </div>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.senha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.senha, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Login" class="btn btn-primary"/>
-        </div>
-    </div>
+    </center>
 }
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
