--- a/AppIFES/Views/Agenda/Create.cshtml
+++ b/AppIFES/Views/Agenda/Create.cshtml
@@ -11,12 +11,12 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal" float: left>
       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.iddisciplina, "iddisciplina", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.iddisciplina, "Nome da Disciplina", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("iddisciplina", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.iddisciplina, "", new { @class = "text-danger" })
