--- a/AppIFES/Views/Agenda/Index.cshtml
+++ b/AppIFES/Views/Agenda/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Novo", "Create", new { id = ViewBag.idIndex }, new { @class = "btn btn-primary" })
 </p>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table align="center" class="table table-striped">
         <tr>
             
             @*<th>
