--- a/AppIFES/Views/Login/Login.cshtml
+++ b/AppIFES/Views/Login/Login.cshtml
@@ -3,13 +3,14 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
+<h2 align="center">Seja Bem-vindo!! </h2>
+    <p><h4 align="center">Efetue seu Login para continuar..</h4></p>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal" align="center" >
 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -21,7 +22,7 @@
         }
 
         <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
@@ -29,7 +30,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.senha, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.senha, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.senha, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.senha, "", new { @class = "text-danger" })
