--- a/AppIFES/Views/Agenda/Edit.cshtml
+++ b/AppIFES/Views/Agenda/Edit.cshtml
@@ -15,6 +15,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idagenda)
+        @Html.HiddenFor(model => model.idevento)
 
         <div class="form-group">
             @Html.LabelFor(model => model.iddisciplina, "iddisciplina", htmlAttributes: new { @class = "control-label col-md-2" })
