--- a/AppIFES/Views/Agenda/Create.cshtml
+++ b/AppIFES/Views/Agenda/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.dataevento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dataevento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.dataevento, new { htmlAttributes = new { @class = "form-control" , @placeholder = "Insira a data no formato DD/MM/AAAA" } })
                 @Html.ValidationMessageFor(model => model.dataevento, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.titulo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.titulo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.titulo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Insira o título do evento" } })
                 @Html.ValidationMessageFor(model => model.titulo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.descricao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.descricao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.descricao, new { htmlAttributes = new { @class = "form-control", @placeholder = "Descreva o evento" } })
                 @Html.ValidationMessageFor(model => model.descricao, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.local, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.local, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.local, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe o local" } })
                 @Html.ValidationMessageFor(model => model.local, "", new { @class = "text-danger" })
             </div>
         </div>
