--- a/AppIFES/Views/Login/Login.cshtml
+++ b/AppIFES/Views/Login/Login.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2 align="center">Seja Bem-vindo!! </h2>
-<p><h4 align="center">Efetue seu Login para continuar..</h4></p>
+<p><h4 align="center">Efetue seu Login para continuar.</h4></p>
 
 @using (Html.BeginForm())
 {
@@ -39,7 +39,7 @@
                 <p></p>
 
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Login" class="btn btn-primary" />
+                    <input type="submit" value="Entrar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
