--- a/AppIFES/Views/Agenda/Edit.cshtml
+++ b/AppIFES/Views/Agenda/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.idevento)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.iddisciplina, "iddisciplina", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.iddisciplina, "Disciplina", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("iddisciplina", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.iddisciplina, "", new { @class = "text-danger" })
