--- a/AppIFES/Views/Usuarios/Details.cshtml
+++ b/AppIFES/Views/Usuarios/Details.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 <hr />
-<h4>Disciplina do Usuário</h4>
+<h4>Grupo/Disciplina do Usuário</h4>
 
 <div class="table-responsive">
     <table class="table table-striped">
