Criado rotina de filtrar dados, ordenação Fix Issue TG-136 GT-136 #closed

--- a/AppIFES/Views/Shared/_Layout.cshtml
+++ b/AppIFES/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    <script src="~/Scripts/gridmvc.min.js"></script>
-    <script src="~/Scripts/gridmvc.js"></script>
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <!-- Custom styles for this template -->
+    <script src="~/Scripts/gridmvc.js"></script>
+    <script src="~/Scripts/gridmvc.min.js"></script>
+        <!-- Custom styles for this template -->
     <link href="~/Content/dashboard.css" rel="stylesheet">
     <link href="~/Content/Gridmvc.css" rel="stylesheet" />
    
@@ -66,5 +66,6 @@
 
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/gridmvc.lang.br.js"></script>
 </body>
 </html>
