--- a/AppIFES/Views/Agenda/Index.cshtml
+++ b/AppIFES/Views/Agenda/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable <AppIFES.Models.Agenda>
-
+@using GridMvc.Html
 
 @{
     ViewBag.Title = "Index";
@@ -10,63 +10,31 @@
     @Html.ActionLink("Novo", "Create", new { id = ViewBag.idIndex }, new { @class = "btn btn-primary" })
 </p>
 <div class="table-responsive">
-    <table align="center" class="table table-striped">
-        <tr>
-            
-            @*<th>
-                @Html.DisplayNameFor(model => model.iddisciplina)
-            </th>*@
-               
-            <th>
-                @Html.DisplayNameFor(model => model.Disciplina.descricao)
-            </th>
+    @Html.Grid(Model).Columns(columns =>
+{
+columns.Add(col => col.idagenda, true);
+columns.Add(col => col.Disciplina.descricao).Titled("Grupo").Filterable(true).Sortable(true);
+columns.Add(col => col.dataevento).Titled("Data dos Eventos").Sortable(true);
+columns.Add(col => col.titulo).Titled("Titulo").Filterable(true).Sortable(true);
+columns.Add(col => col.descricao).Titled("Descrição").Sortable(true);
+columns.Add(col => col.local).Titled("Local").Sortable(true);
+columns.Add().Encoded(false).Sanitized(false)
+.RenderValueAs(col =>
+@<b>
+    @Html.ActionLink("Alterar", "Edit", new { Id = col.idagenda }, new { @class = "btn btn-warning" })
+    @Html.ActionLink("Detalhar", "Details", new { id = col.idagenda }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Apagar", "Delete", new { id = col.idagenda }, new { @class = "btn btn-danger" })
+</b>);
 
-            <th>
-                @Html.DisplayNameFor(model => model.dataevento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.titulo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.local)
-            </th>
-            <th></th>
-        </tr>
-
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.iddisciplina)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Disciplina.descricao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.dataevento)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.titulo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.descricao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.local)
-                </td>
-              
-                <td>
-                    @Html.ActionLink("Alterar", "Edit", new { id = item.idagenda }, new { @class = "btn btn-warning" })
-                    @Html.ActionLink("Detalhar", "Details", new { id = item.idagenda }, new { @class = "btn btn-success" })
-                    @Html.ActionLink("Apagar", "Delete", new { id = item.idagenda }, new { @class = "btn btn-danger" })
-                </td>
-            </tr>
-        }
-
-    </table>
+ }
+    ).SetLanguage("br").WithPaging(8)
 </div>
+
+
+<script>
+    $(function () {
+        pageGrids.ordersGrid.onRowSelect(function (e) {
+            //alert(e.row.nome);
+        });
+    });
+</script>
