--- a/AppIFES/Views/Shared/_Layout.cshtml
+++ b/AppIFES/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
     <!-- Custom styles for this template -->
     <link href="~/Content/dashboard.css" rel="stylesheet">
 </head>
