--- a/AppIFES/Views/Alunos/Index.cshtml
+++ b/AppIFES/Views/Alunos/Index.cshtml
@@ -7,7 +7,7 @@
 <center><h2>Cadastro de Aluno</h2></center>
 
 <p>
-    @Html.ActionLink("Novo", "Create", new { area = "" }, new { @class = "btn btn-primary" })
+    @Html.ActionLink(" ", "Create", new { area = "" }, new { @class = "glyphicon glyphicon-plus btn btn-primary" })
 </p>
 <div class="table-responsive">
     <table class="table table-striped">
@@ -31,10 +31,10 @@
                     @Html.DisplayFor(modelItem => item.email)
                 </td>
                 <td>
-                    @Html.ActionLink("Alterar", "Edit", new { id = item.idaluno }, new { @class = "btn btn-warning" })
-                    @Html.ActionLink("Detalhar", "Details", new { id = item.idaluno }, new { @class = "btn btn-success" })
-                    @Html.ActionLink("Apagar", "Delete", new { id = item.idaluno }, new { @class = "btn btn-danger" })
-                    @Html.ActionLink("Grupos", "Index","Alunodisciplinas", new { id = item.idaluno }, new { @class = "btn btn-info" })
+                    @Html.ActionLink(" ", "Edit", new { id = item.idaluno }, new { @class = "glyphicon glyphicon-edit btn btn-warning btn-sm" })
+                    @Html.ActionLink(" ", "Details", new { id = item.idaluno }, new { @class = "glyphicon glyphicon-list-alt btn btn-success btn-sm" })
+                    @Html.ActionLink(" ", "Delete", new { id = item.idaluno }, new { @class = "glyphicon glyphicon-trash btn btn-danger btn-sm" })
+                    @Html.ActionLink(" ", "Index","Alunodisciplinas", new { id = item.idaluno }, new { @class = "glyphicon glyphicon-th btn btn-info btn-sm" })
                 </td>
             </tr>
         }
