--- a/AppIFES/Views/Disciplinas/Index.cshtml
+++ b/AppIFES/Views/Disciplinas/Index.cshtml
@@ -7,7 +7,7 @@
 <center><h2>Cadastro de Grupos</h2></center>
 
 <p>
-    @Html.ActionLink("Novo", "Create", new { area = "" }, new { @class = "btn btn-primary" })
+    @Html.ActionLink(" ", "Create", new { area = "" }, new { @class = "btn btn-primary glyphicon glyphicon-plus", @title = "Criar nova disciplina",  })
 </p>
 <div class="table-responsive">
     <table class="table table-striped">
@@ -31,9 +31,9 @@
                     @Html.DisplayFor(modelItem => item.descricao)
                 </td>
                 <td>
-                    @Html.ActionLink("Alterar", "Edit", new { id = item.iddisciplina }, new { @class = "btn btn-warning" })
-                    @Html.ActionLink("Detalhar", "Details", new { id = item.iddisciplina }, new { @class = "btn btn-success" })
-                    @Html.ActionLink("Apagar", "Delete", new { id = item.iddisciplina }, new { @class = "btn btn-danger" })
+                    @Html.ActionLink(" ", "Edit", new { id = item.iddisciplina }, new { @class = "glyphicon glyphicon-edit btn btn-warning btn-sm", @title = "Editar disciplina" })
+                    @Html.ActionLink(" ", "Details", new { id = item.iddisciplina }, new { @class = "glyphicon glyphicon-list-alt btn btn-success btn-sm", @title = "Detalhar disciplinas" })
+                    @Html.ActionLink(" ", "Delete", new { id = item.iddisciplina }, new { @class = "glyphicon glyphicon-trash btn btn-danger btn-sm", @title = "Excluir disciplina" })
                 </td>
             </tr>
         }
