--- a/AppIFES/Views/Login/Login.cshtml
+++ b/AppIFES/Views/Login/Login.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Login";
 }
 
-<h2 align="center">Seja Bem-vindo!! </h2>
-<p><h4 align="center">Efetue seu Login para continuar.</h4></p>
+<h2 align="center">Seja Bem-vindo!</h2>
+<p><h4 align="center">Entre com o usuário e senha para continuar.</h4></p>
 
 @using (Html.BeginForm())
 {
@@ -36,6 +36,10 @@
                     @Html.ValidationMessageFor(model => model.senha, "", new { @class = "text-danger" })
                 </div>
 
+                <p></p>
+                <div class="checkbox">
+                    <label><input type="checkbox"> Lembrar Senha</label>
+                </div>
                 <p></p>
 
                 <div class="col-md-offset-2 col-md-10">
