Criação do modelo de Diagrama

--- a/AppIFES/Views/Login/Login.cshtml
+++ b/AppIFES/Views/Login/Login.cshtml
@@ -38,7 +38,7 @@
 
                 <p></p>
                 <div class="checkbox">
-                    <label><input type="checkbox"> Lembrar Senha</label>
+                    <label><input type="checkbox" value="remember-me"> Lembrar Senha</label>
                 </div>
                 <p></p>
 
