--- a/AppIFES/Views/Agenda/Create.cshtml
+++ b/AppIFES/Views/Agenda/Create.cshtml
@@ -64,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Cancelar", "Index", new { data = DateTime.Now }, new { @class = "btn btn-success" })
 </div>
 
 
