--- a/AppIFES/Views/Agenda/Delete.cshtml
+++ b/AppIFES/Views/Agenda/Delete.cshtml
@@ -58,7 +58,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Confirmar" class="btn btn-danger" /> 
-            @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
+            @Html.ActionLink("Cancelar", "Index", new { data = DateTime.Now }, new { @class = "btn btn-success" })
         </div>
     }
 </div>
