--- a/AppIFES/Views/Agenda/Edit.cshtml
+++ b/AppIFES/Views/Agenda/Edit.cshtml
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Cancelar", "Index", new { area = "" }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Cancelar", "Index", new { data = DateTime.Now }, new { @class = "btn btn-success" })
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
