--- a/AppIFES/Views/Home/Index.cshtml
+++ b/AppIFES/Views/Home/Index.cshtml
@@ -8,12 +8,14 @@
 {
     <center><h4>Calendário Completo</h4></center>
 
-        <center><iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=appifesserra%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FSao_Paulo" style="border-width:0" width="1200" height="500" frameborder="0" scrolling="no"></iframe></center>
+
+    <iframe class="embed-responsive center-block" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=appifesserra%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FSao_Paulo" style="border-width:0" width="1200" height="500" frameborder="0" scrolling="no"></iframe>
+
 }
 
 @if (Session["Userid"] == null)
 {
     <center><h4>Últimas Notícias</h4></center>
-    <center><iframe src="http://www.serra.ifes.edu.br" style="border-width:0" width="1200" height="800" frameborder="0" scrolling="no"></iframe>  </center>
-    
+    <iframe class="embed-responsive center-block" src="http://www.serra.ifes.edu.br" style="border-width:0" frameborder="0" scrolling="no" width="1200" height="2000" ></iframe>
+
 }
