Alteração dos nomes nas views, adequando às sugestões do Gilmar.

--- a/AppIFES/Views/Agenda/Edit.cshtml
+++ b/AppIFES/Views/Agenda/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Editar eventos";
 }
 
-<h2>Alterar agenda</h2>
+<h2>Alterar evento da agenda</h2>
 
 
 @using (Html.BeginForm())
