--- a/AppIFES/Views/Disciplinas/Index.cshtml
+++ b/AppIFES/Views/Disciplinas/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Cadastro de Grupos";
 }
 
-<center><h2>Cadastro de Grupos</h2></center>
+<center><h2>Agenda Compartilhada</h2></center>
 
 <p>
     @Html.ActionLink(" ", "Create", new { area = "" }, new { @class = "btn btn-primary glyphicon glyphicon-plus", @title = "Criar nova disciplina" })
