--- a/AppIFES/Views/Agenda/Delete.cshtml
+++ b/AppIFES/Views/Agenda/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Tem certeza que deseja deletar o compromisso da agenda?</h3>
+<h3>Tem certeza que deseja excluir o evento da agenda?</h3>
 <div>
    
     <hr />
