--- a/AppIFES/Views/Agenda/Index.cshtml
+++ b/AppIFES/Views/Agenda/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Index";
 }
 
-<center><h2>Cadastro de Agenda</h2></center>
+<center><h2>Lista de Eventos</h2></center>
 <p>
     @Html.ActionLink(" ", "Create", new { id = ViewBag.idIndex }, new { @class = "glyphicon glyphicon-plus btn btn-primary" }) 
 </p>
